kd10-ingress-troubeshooting/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.my-server.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-service
            port:
              number: 8088
  - host: upper.my-server.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: upper-service
            port:
              number: 8089
